hero section - upadte 1.4

--- a/src/index.css
+++ b/src/index.css
@@ -62,5 +62,5 @@ html {
 
 /* Responsive padding container */
 .responsivePad {
-    @apply 2xl:px-[200px] xl:px-[120px] lg:px-[96px] sm:px-[64px] max-sm:px-[16px];
+    @apply 2xl:px-[200px] xl:px-[120px] lg:px-[96px] sm:px-[64px] min-[480px]:px-[32px] max-sm:px-[16px];
 }
