--- a/src/index.css
+++ b/src/index.css
@@ -17,47 +17,25 @@ html {
 
 /* Headings */
 .h1 {
-  @apply text-4xl md:text-6xl xl:text-8xl;
+  @apply text-5xl md:text-7xl xl:text-9xl;
 }
 .h2 {
-  @apply text-3xl md:text-5xl xl:text-7xl;
+  @apply text-4xl md:text-6xl xl:text-8xl;
 }
 .h3 {
+  @apply text-3xl md:text-5xl xl:text-7xl;
+}
+.h4 {
   @apply text-2xl md:text-4xl xl:text-6xl;
 }
-.h4 {
+.h5 {
   @apply text-xl md:text-3xl xl:text-5xl;
 }
-.h4 {
-  line-height: 1.3; 
-}
-.h5 {
+.h6 {
   @apply text-lg md:text-2xl xl:text-4xl;
 }
-.h6 {
-  @apply text-base md:text-xl xl:text-2xl;
-}
-
-/* Paragraph */
 .p {
-  @apply text-base md:text-lg xl:text-xl;
+  @apply text-base;
 }
 
 /* Other responsive text classes, etc. */
-.m1 {
-  @apply max-sm:text-xl;
-}
-.m2 {
-  @apply max-sm:text-lg;
-}
-.m3 {
-  @apply max-sm:text-[12px];
-}
-.m4 {
-  @apply max-sm:text-[10px];
-}
-.m5 {
-  @apply max-sm:text-[8px];
-}
-
-/* Additional fade animations or transitions if you have them */
