--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* index.css or tailwind.css */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,34 +6,35 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  background-color: #ffffff;
 }
 
-/* Example .responsivePad class from your code */
 .responsivePad {
-  @apply 2xl:px-[200px] xl:px-[120px] lg:px-[96px] sm:px-[64px] min-[480px]:px-[32px] max-sm:px-[16px];
+  @apply 2xl:px-[200px] xl:px-[120px] lg:px-[96px] sm:px-[64px] min-[480px]:px-[24px] max-sm:px-[16px];
 }
 
 /* Headings */
 .h1 {
-  @apply text-5xl md:text-7xl xl:text-9xl;
+  @apply text-4xl leading-snug md:text-6xl md:leading-normal xl:text-8xl xl:leading-snug;
 }
 .h2 {
-  @apply text-4xl md:text-6xl xl:text-8xl;
+  @apply text-3xl leading-snug md:text-5xl md:leading-normal xl:text-7xl xl:leading-snug;
 }
 .h3 {
-  @apply text-3xl md:text-5xl xl:text-7xl;
+  @apply text-2xl leading-snug md:text-4xl md:leading-normal xl:text-6xl xl:leading-snug;
 }
 .h4 {
-  @apply text-2xl md:text-4xl xl:text-6xl;
+  @apply text-xl leading-snug md:text-3xl md:leading-normal xl:text-5xl xl:leading-snug;
 }
 .h5 {
-  @apply text-xl md:text-3xl xl:text-5xl;
+  @apply text-lg leading-snug md:text-2xl md:leading-normal xl:text-4xl xl:leading-snug;
 }
 .h6 {
-  @apply text-lg md:text-2xl xl:text-4xl;
+  @apply text-base leading-normal md:text-xl md:leading-normal xl:text-3xl xl:leading-normal;
+}
+.h7 {
+  @apply text-base leading-normal md:text-lg md:leading-normal xl:text-xl xl:leading-normal;
 }
 .p {
-  @apply text-base;
+  @apply text-base leading-normal xl:text-lg xl:leading-normal;
 }
-
-/* Other responsive text classes, etc. */
