upgraded older sections and fixed services

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 .responsivePad { 
-  @apply 2xl:px-[80px] xl:px-[64px] lg:px-[48px] md:px-[32px] sm:px-[16px] px-[8px]
+  @apply 2xl:px-[80px] xl:px-[64px] lg:px-[48px] md:px-[32px] px-[16px]
 }
 
 /* Headings */
